--- a/CheongBit/CheongBit/Views/Base.lproj/Main.storyboard
+++ b/CheongBit/CheongBit/Views/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -77,7 +78,7 @@
                             <state key="normal" title="성북구 성복동 5-9 ⌵"/>
                             <connections>
                                 <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3oA-qB-VeC"/>
-                                <segue destination="fWG-3O-ecj" kind="presentation" id="vKS-lU-B0Y"/>
+                                <segue destination="IdC-rs-fNn" kind="presentation" modalPresentationStyle="fullScreen" id="4v4-4T-roB"/>
                             </connections>
                         </button>
                     </navigationItem>
@@ -92,19 +93,40 @@
             <point key="canvasLocation" x="1863" y="-833"/>
         </scene>
         <!--Location Select View Controller-->
-        <scene sceneID="hcf-3u-kE5">
+        <scene sceneID="Smg-IM-2or">
             <objects>
-                <viewController id="fWG-3O-ecj" customClass="LocationSelectViewController" customModule="CheongBit" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="YHS-eP-tcr">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
+                <viewController id="IdC-rs-fNn" customClass="LocationSelectViewController" customModule="CheongBit" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FVy-tg-pbm">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="Mbo-dJ-xl9"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZN6-FP-eP6">
+                                <rect key="frame" x="16" y="54" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Gns-EZ-IyK"/>
+                                    <constraint firstAttribute="width" secondItem="ZN6-FP-eP6" secondAttribute="height" multiplier="1:1" id="XQu-Dt-oO3"/>
+                                </constraints>
+                                <inset key="contentEdgeInsets" minX="4" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" title="Button">
+                                    <imageReference key="image" image="xmark" catalog="system" symbolScale="large"/>
+                                </state>
+                                <connections>
+                                    <action selector="backButtonTapped:" destination="IdC-rs-fNn" eventType="touchUpInside" id="LGm-fG-2wf"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Bd3-PP-Huh"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Bd3-PP-Huh" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ZN6-FP-eP6" secondAttribute="trailing" symbolic="YES" id="co8-Pv-xJ5"/>
+                            <constraint firstItem="ZN6-FP-eP6" firstAttribute="top" secondItem="Bd3-PP-Huh" secondAttribute="top" constant="10" id="neg-Vg-jlO"/>
+                            <constraint firstItem="ZN6-FP-eP6" firstAttribute="leading" secondItem="Bd3-PP-Huh" secondAttribute="leading" constant="16" id="stl-qz-nc0"/>
+                        </constraints>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="5rX-BM-5HA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5ad-Im-cud" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2769" y="-833"/>
+            <point key="canvasLocation" x="2661.5384615384614" y="-833.17535545023691"/>
         </scene>
         <!--홈-->
         <scene sceneID="ZR2-U6-cvP">
@@ -238,6 +260,7 @@
         <image name="person.circle" catalog="system" width="128" height="121"/>
         <image name="person.circle.fill" catalog="system" width="128" height="121"/>
         <image name="switchOff" width="500" height="500"/>
+        <image name="xmark" catalog="system" width="128" height="113"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
