--- a/CheongBit/CheongBit/Views/Base.lproj/Main.storyboard
+++ b/CheongBit/CheongBit/Views/Base.lproj/Main.storyboard
@@ -158,13 +158,48 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Q0a-V8-ZM0">
-                                <rect key="frame" x="0.0" y="24.333333969116211" width="390" height="43.666667938232422"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="userCell" id="Q0a-V8-ZM0" customClass="FriendsTableViewCell" customModule="CheongBit" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="24.333333969116211" width="390" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Q0a-V8-ZM0" id="rU3-yh-aGw">
-                                    <rect key="frame" x="0.0" y="0.0" width="390" height="43.666667938232422"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="390" height="70"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nvH-xe-F3s">
+                                            <rect key="frame" x="81.666666666666671" y="17" width="44.333333333333329" height="21"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4WD-Mw-p7c">
+                                            <rect key="frame" x="81.666666666666671" y="38" width="33" height="16"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="switchOn" translatesAutoresizingMaskIntoConstraints="NO" id="lrL-SB-dRZ">
+                                            <rect key="frame" x="14.999999999999996" y="9" width="51.666666666666657" height="52"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="lrL-SB-dRZ" secondAttribute="height" multiplier="1:1" id="90Y-LY-IVP"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="nvH-xe-F3s" firstAttribute="leading" secondItem="lrL-SB-dRZ" secondAttribute="trailing" constant="15" id="1Uz-xi-iP9"/>
+                                        <constraint firstItem="4WD-Mw-p7c" firstAttribute="leading" secondItem="lrL-SB-dRZ" secondAttribute="trailing" constant="15" id="4Xs-dH-fHb"/>
+                                        <constraint firstItem="4WD-Mw-p7c" firstAttribute="top" secondItem="nvH-xe-F3s" secondAttribute="bottom" id="KEi-LQ-5tU"/>
+                                        <constraint firstItem="lrL-SB-dRZ" firstAttribute="leading" secondItem="rU3-yh-aGw" secondAttribute="leading" constant="15" id="LfQ-Wo-wt8"/>
+                                        <constraint firstItem="lrL-SB-dRZ" firstAttribute="top" secondItem="rU3-yh-aGw" secondAttribute="top" constant="9" id="Z5F-j6-e3F"/>
+                                        <constraint firstItem="lrL-SB-dRZ" firstAttribute="centerY" secondItem="rU3-yh-aGw" secondAttribute="centerY" id="ZtR-7T-Eh2"/>
+                                        <constraint firstItem="nvH-xe-F3s" firstAttribute="top" secondItem="rU3-yh-aGw" secondAttribute="top" constant="17" id="kRn-TD-CAD"/>
+                                        <constraint firstItem="lrL-SB-dRZ" firstAttribute="width" secondItem="rU3-yh-aGw" secondAttribute="width" multiplier="0.132564" id="seu-05-DCD"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="userIdLabel" destination="4WD-Mw-p7c" id="StI-m2-HlP"/>
+                                    <outlet property="userImageView" destination="lrL-SB-dRZ" id="Ytm-E7-PLm"/>
+                                    <outlet property="userNameLabel" destination="nvH-xe-F3s" id="U5r-fQ-8uK"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -176,7 +211,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GTK-Ws-bZm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1860" y="-156"/>
+            <point key="canvasLocation" x="1860" y="-156.39810426540285"/>
         </scene>
         <!--My Page View Controller-->
         <scene sceneID="JYM-jU-7E3">
@@ -260,6 +295,7 @@
         <image name="person.circle" catalog="system" width="128" height="121"/>
         <image name="person.circle.fill" catalog="system" width="128" height="121"/>
         <image name="switchOff" width="500" height="500"/>
+        <image name="switchOn" width="500" height="500"/>
         <image name="xmark" catalog="system" width="128" height="113"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
