--- a/CheongBit/CheongBit/Views/Base.lproj/Main.storyboard
+++ b/CheongBit/CheongBit/Views/Base.lproj/Main.storyboard
@@ -159,39 +159,42 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="userCell" id="Q0a-V8-ZM0" customClass="FriendsTableViewCell" customModule="CheongBit" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="24.333333969116211" width="390" height="70"/>
+                                <rect key="frame" x="0.0" y="24.333333969116211" width="390" height="78"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Q0a-V8-ZM0" id="rU3-yh-aGw">
-                                    <rect key="frame" x="0.0" y="0.0" width="390" height="70"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="390" height="78"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nvH-xe-F3s">
-                                            <rect key="frame" x="81.666666666666671" y="17" width="44.333333333333329" height="21"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4WD-Mw-p7c">
-                                            <rect key="frame" x="81.666666666666671" y="38" width="33" height="16"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="oti-4E-RUY">
+                                            <rect key="frame" x="84.666666666666671" y="21" width="44.333333333333329" height="36"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nvH-xe-F3s">
+                                                    <rect key="frame" x="0.0" y="0.0" width="44.333333333333336" height="20.333333333333332"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4WD-Mw-p7c">
+                                                    <rect key="frame" x="0.0" y="20.333333333333336" width="44.333333333333336" height="15.666666666666664"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="switchOn" translatesAutoresizingMaskIntoConstraints="NO" id="lrL-SB-dRZ">
-                                            <rect key="frame" x="14.999999999999996" y="9" width="51.666666666666657" height="52"/>
+                                            <rect key="frame" x="15.999999999999996" y="13" width="51.666666666666657" height="52"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="lrL-SB-dRZ" secondAttribute="height" multiplier="1:1" id="90Y-LY-IVP"/>
                                             </constraints>
                                         </imageView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="nvH-xe-F3s" firstAttribute="leading" secondItem="lrL-SB-dRZ" secondAttribute="trailing" constant="15" id="1Uz-xi-iP9"/>
-                                        <constraint firstItem="4WD-Mw-p7c" firstAttribute="leading" secondItem="lrL-SB-dRZ" secondAttribute="trailing" constant="15" id="4Xs-dH-fHb"/>
-                                        <constraint firstItem="4WD-Mw-p7c" firstAttribute="top" secondItem="nvH-xe-F3s" secondAttribute="bottom" id="KEi-LQ-5tU"/>
-                                        <constraint firstItem="lrL-SB-dRZ" firstAttribute="leading" secondItem="rU3-yh-aGw" secondAttribute="leading" constant="15" id="LfQ-Wo-wt8"/>
-                                        <constraint firstItem="lrL-SB-dRZ" firstAttribute="top" secondItem="rU3-yh-aGw" secondAttribute="top" constant="9" id="Z5F-j6-e3F"/>
+                                        <constraint firstItem="oti-4E-RUY" firstAttribute="leading" secondItem="lrL-SB-dRZ" secondAttribute="trailing" constant="17" id="6uU-PM-chM"/>
+                                        <constraint firstItem="lrL-SB-dRZ" firstAttribute="leading" secondItem="rU3-yh-aGw" secondAttribute="leading" constant="16" id="LfQ-Wo-wt8"/>
+                                        <constraint firstItem="oti-4E-RUY" firstAttribute="top" secondItem="rU3-yh-aGw" secondAttribute="top" constant="21" id="YNH-fV-y2a"/>
+                                        <constraint firstItem="lrL-SB-dRZ" firstAttribute="top" secondItem="rU3-yh-aGw" secondAttribute="top" constant="13" id="Z5F-j6-e3F"/>
                                         <constraint firstItem="lrL-SB-dRZ" firstAttribute="centerY" secondItem="rU3-yh-aGw" secondAttribute="centerY" id="ZtR-7T-Eh2"/>
-                                        <constraint firstItem="nvH-xe-F3s" firstAttribute="top" secondItem="rU3-yh-aGw" secondAttribute="top" constant="17" id="kRn-TD-CAD"/>
                                         <constraint firstItem="lrL-SB-dRZ" firstAttribute="width" secondItem="rU3-yh-aGw" secondAttribute="width" multiplier="0.132564" id="seu-05-DCD"/>
                                     </constraints>
                                 </tableViewCellContentView>
