--- a/CheongBit/CheongBit/Views/Base.lproj/Main.storyboard
+++ b/CheongBit/CheongBit/Views/Base.lproj/Main.storyboard
@@ -19,24 +19,24 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="BQf-8e-oU2">
-                                <rect key="frame" x="58" y="164.33333333333334" width="274" height="395.33333333333326"/>
+                                <rect key="frame" x="50" y="164.33333333333334" width="290" height="395.33333333333326"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="micOff" translatesAutoresizingMaskIntoConstraints="NO" id="scd-YC-Lho">
-                                        <rect key="frame" x="0.0" y="0.0" width="274" height="274.33333333333331"/>
+                                        <rect key="frame" x="8" y="0.0" width="274" height="274.33333333333331"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" secondItem="scd-YC-Lho" secondAttribute="height" id="7Pv-eW-YOe"/>
+                                            <constraint firstAttribute="width" secondItem="scd-YC-Lho" secondAttribute="height" multiplier="1:1" id="7Pv-eW-YOe"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="인식 중이 아님" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HOC-jf-Qzo">
-                                        <rect key="frame" x="88.666666666666657" y="274.33333333333337" width="97" height="20.333333333333314"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="인식 중이 아님" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HOC-jf-Qzo" customClass="whiteText" customModule="CheongBit" customModuleProvider="target">
+                                        <rect key="frame" x="97" y="274.33333333333337" width="96.333333333333314" height="20.333333333333314"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TdG-eB-67Q">
-                                        <rect key="frame" x="86.666666666666657" y="294.66666666666663" width="100.66666666666666" height="100.66666666666669"/>
+                                        <rect key="frame" x="94.666666666666657" y="294.66666666666663" width="100.66666666666666" height="100.66666666666669"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" secondItem="TdG-eB-67Q" secondAttribute="height" id="ul5-7t-pnp"/>
+                                            <constraint firstAttribute="width" secondItem="TdG-eB-67Q" secondAttribute="height" multiplier="1:1" id="ul5-7t-pnp"/>
                                         </constraints>
                                         <state key="normal" title="Button" image="switchOff"/>
                                         <connections>
@@ -46,7 +46,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l3c-IZ-TXa" customClass="reportButton" customModule="CheongBit" customModuleProvider="target">
-                                <rect key="frame" x="40" y="590.33333333333337" width="310" height="110.66666666666663"/>
+                                <rect key="frame" x="40" y="581.33333333333337" width="310" height="110.66666666666663"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="l3c-IZ-TXa" secondAttribute="height" multiplier="3.5:1.25" id="U15-kw-uiv"/>
                                 </constraints>
@@ -60,11 +60,12 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="l3c-IZ-TXa" secondAttribute="bottom" constant="60" id="57l-N6-NIK"/>
                             <constraint firstItem="TdG-eB-67Q" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.15" id="96i-eY-H90"/>
+                            <constraint firstItem="l3c-IZ-TXa" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" multiplier="1.5" id="QF4-An-rJo"/>
                             <constraint firstItem="scd-YC-Lho" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.325" id="Ref-p7-qr0"/>
                             <constraint firstItem="l3c-IZ-TXa" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TWX-ns-QvE"/>
                             <constraint firstItem="BQf-8e-oU2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="UaW-eI-CEv"/>
+                            <constraint firstItem="BQf-8e-oU2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="c5M-qI-wHg"/>
                             <constraint firstItem="l3c-IZ-TXa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="nS3-Dx-4rh"/>
                             <constraint firstItem="BQf-8e-oU2" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-60" id="z8V-it-keJ"/>
                         </constraints>
@@ -77,13 +78,14 @@
                             <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
                             <state key="normal" title="성북구 성복동 5-9 ⌵"/>
                             <connections>
-                                <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3oA-qB-VeC"/>
+                                <action selector="locationSelectbuttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hL2-20-lf3"/>
                                 <segue destination="IdC-rs-fNn" kind="presentation" modalPresentationStyle="fullScreen" id="4v4-4T-roB"/>
                             </connections>
                         </button>
                     </navigationItem>
                     <connections>
                         <outlet property="micImage" destination="scd-YC-Lho" id="Xag-8q-feM"/>
+                        <outlet property="micONandOFFStackView" destination="BQf-8e-oU2" id="vr4-PO-wah"/>
                         <outlet property="micStatusLabel" destination="HOC-jf-Qzo" id="3Nv-YM-kN9"/>
                         <outlet property="micSwitch" destination="TdG-eB-67Q" id="5h5-8K-4ks"/>
                     </connections>
@@ -157,9 +159,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="친구 아이디를 검색 하세요." id="2Jd-MA-xuH">
+                            <rect key="frame" x="0.0" y="0.0" width="390" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="userCell" id="Q0a-V8-ZM0" customClass="FriendsTableViewCell" customModule="CheongBit" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="24.333333969116211" width="390" height="78"/>
+                                <rect key="frame" x="0.0" y="68.333333969116211" width="390" height="78"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Q0a-V8-ZM0" id="rU3-yh-aGw">
                                     <rect key="frame" x="0.0" y="0.0" width="390" height="78"/>
@@ -226,11 +233,47 @@
                         <viewLayoutGuide key="safeArea" id="pEv-x1-bHw"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="8Aa-8q-Z4q"/>
+                    <navigationItem key="navigationItem" id="8Aa-8q-Z4q">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="gearshape" catalog="system" id="lNa-Ot-2qw">
+                            <connections>
+                                <segue destination="Ikh-jM-FP0" kind="show" id="EnN-4H-Dgu"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fWU-CF-M1l" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1877" y="549"/>
+        </scene>
+        <!--설정-->
+        <scene sceneID="M38-Vu-ar2">
+            <objects>
+                <tableViewController id="Ikh-jM-FP0" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="n1f-yh-jya">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="50" id="Z3x-Hw-G8z">
+                                <rect key="frame" x="0.0" y="24.333333969116211" width="390" height="50"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Z3x-Hw-G8z" id="oSj-nd-BpN">
+                                    <rect key="frame" x="0.0" y="0.0" width="390" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <sections/>
+                        <connections>
+                            <outlet property="dataSource" destination="Ikh-jM-FP0" id="rKC-s9-FOz"/>
+                            <outlet property="delegate" destination="Ikh-jM-FP0" id="crQ-mF-GTG"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="설정" id="oBu-YD-7Js"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HNJ-OE-IYe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2662" y="549"/>
         </scene>
         <!--친구 상태-->
         <scene sceneID="YoF-2j-y4I">
@@ -290,9 +333,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="gearshape" catalog="system" width="128" height="121"/>
         <image name="house" catalog="system" width="128" height="106"/>
         <image name="house.fill" catalog="system" width="128" height="106"/>
-        <image name="micOff" width="250" height="250"/>
+        <image name="micOff" width="500" height="500"/>
         <image name="person.2" catalog="system" width="128" height="81"/>
         <image name="person.2.fill" catalog="system" width="128" height="80"/>
         <image name="person.circle" catalog="system" width="128" height="121"/>
